selo homepage completed

--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -1,1 +1,16 @@
+@import "./variables";
 @import "./font.scss";
+@import "./side-bar.scss";
+@import "./chart.scss";
+
+/* common styles here */
+
+.main {
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+  background-image: url("../img/home-bg.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
