--- a/src/pages/authentication/authentication.scss
+++ b/src/pages/authentication/authentication.scss
@@ -1,6 +1,8 @@
+@import "../../assets/style/variables";
+
 .authentication {
   display: flex;
-  background: #66023c;
+  background: $purple;
   width: 100vw;
   height: 100vh;
   .container {
@@ -67,7 +69,7 @@
     }
     .MuiOutlinedInput-root {
       border-radius: 0;
-      background: #c8c8c825;
+      background: $grey-25;
       height: 40px;
     }
     .MuiFormHelperText-marginDense {
@@ -97,7 +99,7 @@
   .sign-submit {
     width: 100%;
     height: 40px;
-    background: #c8c8c825;
+    background: $grey-25;
     outline: none;
     border: none;
     border-radius: 0;
