--- a/src/assets/style/chart.scss
+++ b/src/assets/style/chart.scss
@@ -30,7 +30,7 @@
         position: absolute;
         top: 34px;
         left: 17px;
-        img {
+        div {
           width: 16px;
           height: 16px;
           position: absolute;
@@ -39,6 +39,10 @@
           cursor: pointer;
           &:hover {
             opacity: 0.7;
+          }
+          img {
+            width: 100%;
+            height: 100%;
           }
         }
       }
@@ -67,7 +71,7 @@
         background: $grey;
         top: 50px;
         left: 40px;
-        img {
+        span {
           width: 16px;
           height: 16px;
           right: -16px;
@@ -77,7 +81,12 @@
           &:hover {
             opacity: 0.7;
           }
+          img {
+            width: 100%;
+            height: 100%;
+          }
         }
+
         @media (max-width: 960px) {
           display: none;
         }
