--- a/src/pages/homepage/homepage.scss
+++ b/src/pages/homepage/homepage.scss
@@ -57,7 +57,7 @@
               background: $grey;
               top: 50px;
               left: 25px;
-              img {
+              span {
                 position: absolute;
                 width: 16px;
                 height: 16px;
@@ -67,7 +67,13 @@
                 &:hover {
                   opacity: 0.7;
                 }
+                img {
+                  width: 100%;
+                  height: 100%;
+                  position: absolute;
+                }
               }
+
               @media (max-width: 768px) {
                 display: none;
               }
