--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -2,6 +2,7 @@
 @import "./font.scss";
 @import "./side-bar.scss";
 @import "./chart.scss";
+@import "./custom-tooltip.scss";
 
 /* common styles here */
 
