--- a/src/assets/style/side-bar.scss
+++ b/src/assets/style/side-bar.scss
@@ -5,12 +5,9 @@
   height: 100%;
   left: 0;
   top: 0;
-  width: 300px;
+  width: 50px;
   background: transparent;
   z-index: 1000;
-  @media (max-width: 1100px) {
-    background: $white;
-  }
   .container {
     padding: 100px 20px 70px;
     display: flex;
@@ -20,10 +17,16 @@
       display: flex;
       align-items: center;
       flex-direction: column;
-      .MuiAvatar-root {
+      width: 300px;
+      .avatar {
         width: 88px;
         height: 88px;
-        font-size: 50px;
+        cursor: pointer;
+        .MuiAvatar-root {
+          width: 100%;
+          height: 100%;
+          font-size: 50px;
+        }
       }
       .full-name {
         font-style: normal;
@@ -44,41 +47,27 @@
         text-align: center;
         color: $purple;
       }
+      @media (max-width: 1100px) {
+        visibility: hidden;
+      }
     }
     .nav-container {
-      margin: 30px 0;
+      margin: 50px 0 0;
       padding: 0 0 0 20px;
       li {
-        margin: 25px 0;
+        margin: 10px 0;
         cursor: pointer;
         color: $purple;
-        &:hover {
-          opacity: 0.7;
-        }
+        height: 40px;
         &::marker {
-          font-size: 20px;
+          font-size: 24px;
         }
+        a,
         p {
-          padding-left: 50px;
-          font-size: 14px;
-          line-height: 14px;
+          padding-left: 20px;
+          font-size: 18px;
+          line-height: 18px;
         }
-      }
-    }
-    .sidebar-footer {
-      display: none;
-      margin: auto auto 0;
-      border-bottom: 1px solid $grey;
-      padding: 8px 0;
-      width: fit-content;
-      p {
-        font-size: 14px;
-        line-height: 14px;
-        color: $purple;
-        letter-spacing: 0.27em;
-      }
-      @media (max-width: 1100px) {
-        display: block;
       }
     }
   }
