--- a/src/assets/style/chart.scss
+++ b/src/assets/style/chart.scss
@@ -8,6 +8,9 @@
   justify-content: space-between;
   flex-grow: 1;
   position: relative;
+  @media (min-width: 2000px) {
+    width: 900px;
+  }
   .chart-element {
     display: flex;
     flex-direction: column;
