--- a/src/pages/homepage/homepage.scss
+++ b/src/pages/homepage/homepage.scss
@@ -9,24 +9,24 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    padding: 90px 20px 70px 70px;
+    padding: 90px 20px 70px;
     img {
       width: 380px;
       max-width: 100%;
+      @media (min-width: 2000px) {
+        width: 500px;
+      }
     }
     .current-peak {
       margin: 0 auto;
       max-width: 400px;
+      @media (min-width: 2000px) {
+        max-width: 550px;
+        height: 85px;
+      }
       p {
         color: $purple;
         position: relative;
-        .badge {
-          position: absolute;
-          width: 20px;
-          img {
-            width: 100%;
-          }
-        }
       }
       .left-text {
         text-align: right;
@@ -38,55 +38,88 @@
           font-size: 30px;
           line-height: 30px;
           letter-spacing: 0.27em;
+          @media (min-width: 2000px) {
+            font-size: 45px;
+            line-height: 45px;
+          }
         }
       }
       .right-text {
         text-align: left;
-        .current {
+        position: relative;
+        p {
+          font-family: "Futura Std Medium";
+          position: absolute;
+          bottom: 0;
+          left: 30px;
           font-style: normal;
           font-weight: normal;
+        }
+        .current {
           font-size: 60px;
           line-height: 72px;
-          .badge {
-            top: -30px;
-            height: 0;
-            .liner-helper {
-              position: absolute;
-              height: 1px;
-              width: 100px;
-              background: $grey;
-              top: 50px;
-              left: 25px;
-              span {
-                position: absolute;
-                width: 16px;
-                height: 16px;
-                top: -8px;
-                right: -16px;
-                cursor: pointer;
-                &:hover {
-                  opacity: 0.7;
-                }
-                img {
-                  width: 100%;
-                  height: 100%;
-                  position: absolute;
-                }
-              }
-
-              @media (max-width: 768px) {
-                display: none;
-              }
-            }
+          @media (min-width: 2000px) {
+            font-size: 70px;
+            line-height: 80px;
+            bottom: 10px;
           }
         }
         .peak {
-          font-style: normal;
-          font-weight: normal;
           font-size: 48px;
           line-height: 58px;
-          .badge {
-            top: -20px;
+          @media (min-width: 2000px) {
+            font-size: 55px;
+            line-height: 65px;
+            bottom: 10px;
+          }
+        }
+        .badge {
+          top: 0;
+          right: 0;
+          height: 0;
+          position: absolute;
+          width: 20px;
+          @media (min-width: 2000px) {
+            right: 35px;
+            top: 6px;
+          }
+          img {
+            width: 20px;
+          }
+          .liner-helper {
+            position: absolute;
+            height: 1px;
+            width: 100px;
+            background: $grey;
+            top: 9px;
+            left: 25px;
+            span {
+              position: absolute;
+              width: 16px;
+              height: 16px;
+              top: -8px;
+              right: -16px;
+              cursor: pointer;
+              &:hover {
+                opacity: 0.7;
+              }
+              img {
+                width: 100%;
+                height: 100%;
+                position: absolute;
+              }
+            }
+            @media (max-width: 768px) {
+              display: none;
+            }
+          }
+        }
+        .peak-badge {
+          right: 20px;
+          top: 10px;
+          @media (min-width: 2000px) {
+            right: 65px;
+            top: 20px;
           }
         }
       }
@@ -96,6 +129,9 @@
       height: 1px;
       background: $grey;
       max-width: 350px;
+      @media (min-width: 2000px) {
+        max-width: 500px;
+      }
     }
   }
 }
