auto-counter component updated

--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -2,7 +2,7 @@
 @import "./font.scss";
 @import "./side-bar.scss";
 @import "./chart.scss";
-@import "./custom-tooltip.scss";
+@import "./custom-components.scss";
 
 /* common styles here */
 
